# tiny_utils

./: .CppCheckSuppressions  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  conanfile.py
.github/: Doxyfile.in  linux.yml  mac.yml  windows.yml
.github/profiles/: clang-cl  msvc
include/: CMakeLists.txt
include/tiny_utils/: fast_pimpl.h  numeric_traits.h
test/: CMakeLists.txt
test/test_fast_pimpl/: CMakeLists.txt  example.cpp  example.h  main.cpp
tests/: CMakeLists.txt
tests/fast_pimpl_test/: CMakeLists.txt  book.cpp  book.h  example.cpp  example.h  main.cpp
util/: fast_pimpl.h  numeric_traits.h
